# docs/swagger.yaml
@@ -257,6 +257,8 @@ definitions:
       block_write:
         type: number
       container_id:
+        description: L'index composite sert les requêtes d'historique filtrées par
+          conteneur et fenêtre de temps.
         type: string
       cpu_percent:
         type: number
@@ -384,6 +386,14 @@ definitions:
       required:
         description: Est-ce obligatoire ?
         type: boolean
+    type: object
+  internal_modules_v2_users.AdminUpdatePasswordRequest:
+    properties:
+      new_password:
+        minLength: 8
+        type: string
+    required:
+    - new_password
     type: object
   internal_modules_v2_users.CreateUserRequest:
     properties:
@@ -1748,6 +1758,46 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Update user
+      tags:
+      - users
+  /v2/users/{id}/password:
+    put:
+      consumes:
+      - application/json
+      description: Définit le mot de passe d'un autre utilisateur (nécessite users.manage)
+        et révoque ses jetons
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: New password
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/internal_modules_v2_users.AdminUpdatePasswordRequest'
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: Reset a user's password
       tags:
       - users
   /v2/users/me:
